# hawk-tui-video-generator

./: CLAUDE.md  LICENSE  README.md  pyproject.toml
docs/: CNAME  index.html
hawk/: app.py  config.py  local_image_gen.py  logger.py  main.py  replicate_client.py  video.py
hawk/screens/: __init__.py  captions.py  preview.py  splash.py
