[project]
name = "hawk-tui"
version = "1.0.0"
description = "TikTok video creator TUI with Replicate + FFmpeg"
authors = [
    {name = "Carson Mulligan"}
]
requires-python = ">=3.11"
dependencies = [
    "textual>=0.50.0",
    "rich>=13.0.0",
    "replicate>=0.25.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "pillow>=10.0.0",
    "anthropic>=0.40.0",
]

[project.scripts]
hawk = "hawk.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
